@@ -1,0 +1,21 @@
+package VC11ProjectCreator;
+
+# ************************************************************
+# Description   : A VC11 Project Creator
+# Author        : Johnny Willemsen
+# Create Date   : 12/12/2011
+# $Id$
+# ************************************************************
+
+# ************************************************************
+# Pragmas
+# ************************************************************
+
+use strict;
+
+use VC10ProjectCreator;
+
+use vars qw(@ISA);
+@ISA = qw(VC10ProjectCreator);
+
+1;
