@@ -1,0 +1,22 @@
+package VC11WorkspaceCreator;
+
+# ************************************************************
+# Description   : A VC11 Workspace Creator
+# Author        : Johnny Willemsen
+# Create Date   : 12/12/2011
+# $Id$
+# ************************************************************
+
+# ************************************************************
+# Pragmas
+# ************************************************************
+
+use strict;
+
+use VC11ProjectCreator;
+use VC10WorkspaceCreator;
+
+use vars qw(@ISA);
+@ISA = qw(VC10WorkspaceCreator);
+
+1;
